--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    font-family: 'Nunito Sans', Courier, monospace;
+    background-color: #d3d3d3;
+}
 .bg-holder {
     position: absolute;
     width: 100%;
@@ -7,5 +11,6 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-color: rgb(0, 0, 0);
 
 }
