--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     font-family: 'Nunito Sans', Courier, monospace;
     background-color: #d3d3d3;
 }
-.bg-holder {
+.bg-holder{
     position: absolute;
     width: 100%;
     min-height: 100%;
@@ -13,4 +13,33 @@ body{
     background-repeat: no-repeat;
     background-color: rgb(0, 0, 0);
 
+}
+h3{
+    color: rgb(3, 44, 126);
+}
+p{
+    color: rgb(114, 126, 136);
+}
+.btn{
+    font-size: 1rem;
+    font-weight: 700;
+}
+.btn i{
+    vertical-align: text-top;
+
+}
+.divider-content-center{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    background-color: #d3d3d3;
+    font-size: 1rem;
+    font-weight: 500;
+    color: #999;
+}
+.divider{
+    margin: 2rem 0;
 }
