add uesrname and password forms and forgot and sign up links

--- a/style.css
+++ b/style.css
@@ -15,14 +15,17 @@ body{
 
 }
 h3{
-    color: rgb(3, 44, 126);
+    color: rgb(30, 40, 61);
+    font-family: 'Times New Roman', Times, serif;
 }
 p{
     color: rgb(114, 126, 136);
 }
 .btn{
-    font-size: 1rem;
+    font-size: 1.1rem;
     font-weight: 700;
+    border-radius: 10px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .btn i{
     vertical-align: text-top;
@@ -42,4 +45,10 @@ p{
 }
 .divider{
     margin: 2rem 0;
+}
+a{
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;
 }
